Performance tuning by using ng-if instead ng-show where it makes sense

--- a/src/components/editor/editableSubjectSelect.html
+++ b/src/components/editor/editableSubjectSelect.html
@@ -1,8 +1,8 @@
 <div>
-  <div ng-show="ctrl.subject || ctrl.isEditing()">
+  <div ng-if="ctrl.subject || ctrl.isEditing()">
     <subject-view subject="ctrl.subject"></subject-view>
     <div ng-class="{'model-view__sub': !!ctrl.subject}">
-      <button ng-show="ctrl.isEditing()" type="button" class="btn btn-default btn-sm" ng-click="ctrl.selectSubject()" ng-disabled="ctrl.disable" translate>Choose subject</button>
+      <button ng-if="ctrl.isEditing()" type="button" class="btn btn-default btn-sm" ng-click="ctrl.selectSubject()" ng-disabled="ctrl.disable" translate>Choose subject</button>
     </div>
   </div>
 </div>
