--- a/src/components/editor/editableMultipleDataTypeInput.html
+++ b/src/components/editor/editableMultipleDataTypeInput.html
@@ -1,11 +1,11 @@
 <div class="editable-wrap form-group">
   <editable-label input-id="ctrl.id" ng-show="ctrl.title && (ctrl.ngModel.length > 0 || ctrl.isEditing())" data-title="ctrl.title"></editable-label>
 
-  <span ng-show="!ctrl.isEditing()" ng-repeat="value in ctrl.ngModel">
+  <span ng-if="!ctrl.isEditing()" ng-repeat="value in ctrl.ngModel">
     <span>{{value}}<span ng-if="!$last">, </span></span>
   </span>
 
-  <div ng-show="ctrl.isEditing()">
+  <div ng-if="ctrl.isEditing()">
     <div class="form-control multi-input">
       <div ng-repeat="value in ctrl.ngModel" ng-class="['added-item', { 'has-error': !ctrl.isValid(value)}]">
         {{value}}
