--- a/src/components/editor/editableMultipleUriSelect.html
+++ b/src/components/editor/editableMultipleUriSelect.html
@@ -2,12 +2,12 @@
 
   <editable-label input-id="ctrl.id" ng-show="ctrl.title && (ctrl.items.length > 0 || ctrl.isEditing())" data-title="ctrl.title"></editable-label>
 
-  <span ng-show="!ctrl.isEditing()" ng-repeat="item in ctrl.items track by item.value()">
+  <span ng-if="!ctrl.isEditing()" ng-repeat="item in ctrl.items track by item.value()">
     <span ng-show="item.showPlain">{{item.displayValue}}<span ng-if="!$last">, </span></span>
     <a ng-show="item.showLink" ng-href="{{item.href}}">{{item.displayValue}}<span ng-if="!$last">, </span></a>
   </span>
 
-  <div ng-show="ctrl.isEditing()">
+  <div ng-if="ctrl.isEditing()">
       <div class="form-control multi-input">
         <div ng-repeat="item in ctrl.items track by item.value()" class="added-item">
           {{item.displayValue}}
@@ -27,6 +27,6 @@
       </div>
     <error-messages ng-model-controller="uriInputController"></error-messages>
 
-    <button ng-show="ctrl.isEditing()" type="button" class="btn btn-default btn-sm" style="display: block" ng-click="ctrl.addUri()">{{('Choose ' + ctrl.type) | translate}}</button>
+    <button ng-if="ctrl.isEditing()" type="button" class="btn btn-default btn-sm" style="display: block" ng-click="ctrl.addUri()">{{('Choose ' + ctrl.type) | translate}}</button>
   </div>
 </div>
