--- a/src/components/form/editable.html
+++ b/src/components/form/editable.html
@@ -3,8 +3,8 @@
   <div ng-show="ctrl.isEditing()" ng-transclude></div>
 
   <div ng-if="!ctrl.isEditing()">
-    <a ng-show="ctrl.item.showLink" ng-href="{{ctrl.item.href}}">{{ctrl.item.displayValue}}</a>
-    <span ng-show="ctrl.item.showPlain" >{{ctrl.item.displayValue}}</span>
+    <a ng-if="ctrl.item.showLink" ng-href="{{ctrl.item.href}}">{{ctrl.item.displayValue}}</a>
+    <span ng-if="ctrl.item.showPlain" >{{ctrl.item.displayValue}}</span>
   </div>
   <error-messages ng-model-controller="ngModel"></error-messages>
 </div>
