--- a/src/components/form/errorMessages.html
+++ b/src/components/form/errorMessages.html
@@ -1,5 +1,5 @@
 
-<div ng-show="isVisible()">
+<div ng-if="isVisible()">
   <ul ng-messages="ngModelController.$error" ng-messages-multiple class="errors" ng-repeat="ngModelController in ngModelControllers">
     <li ng-message="url">{{'Invalid url error' | translate}}</li>
     <li ng-message="namespace">{{'Invalid namespace error' | translate}}</li>
