--- a/src/components/model/referencesView.html
+++ b/src/components/model/referencesView.html
@@ -7,7 +7,9 @@
     <uib-accordion-heading>
       <span accordion-chevron is-open="ctrl.opened[reference.id]">{{reference | translateLabel}}</span>
     </uib-accordion-heading>
-    <button ng-show="modelViewController.canModify() && !reference.isLocal()" type="button" class="btn btn-default pull-right" ng-click="modelViewController.removeReference(reference)" translate>Delete reference</button>
-    <non-editable data-title="Vocabulary id" value="reference.vocabularyId"></non-editable>
+    <div ng-if="ctrl.opened[reference.id]">
+      <button ng-show="modelViewController.canModify() && !reference.isLocal()" type="button" class="btn btn-default pull-right" ng-click="modelViewController.removeReference(reference)" translate>Delete reference</button>
+      <non-editable data-title="Vocabulary id" value="reference.vocabularyId"></non-editable>
+    </div>
   </uib-accordion-group>
 </uib-accordion>
