--- a/src/components/common/searchResults.html
+++ b/src/components/common/searchResults.html
@@ -6,7 +6,9 @@
      key-control-selection>
 
   <div ng-show="searchResult.isAddNew()">
-    <h5>{{searchResult.label}} <i ng-show="searchResult.glyphiconClass" ng-class="searchResult.glyphiconClass"></i><i class="glyphicon glyphicon-plus pull-left"></i></h5>
+    <i ng-show="searchResult.glyphiconClass" ng-class="searchResult.glyphiconClass"></i>
+    <i class="glyphicon glyphicon-plus pull-left"></i>
+    <h5 style="margin-left: 23px">{{searchResult.label}}</h5>
   </div>
 
   <search-result-transclude ng-hide="searchResult.isAddNew()"></search-result-transclude>
