Allow unresolved entities from search modals
Closes #363

--- a/src/components/editor/searchPredicateModal.html
+++ b/src/components/editor/searchPredicateModal.html
@@ -60,7 +60,7 @@
           <div ng-if="ctrl.isSelectionFormData()">
             <editable data-title="External URI">
               <div class="input-group input-group-md">
-                <input id="externalUri" type="text" class="form-control" required uri-input="required-namespace" model="ctrl.model" ng-model="ctrl.selection.uri" />
+                <input id="externalUri" type="text" class="form-control" required uri-input="required-namespace" model="ctrl.model" ng-model="ctrl.selection.id" />
               </div>
             </editable>
           </div>
