--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -298,6 +298,10 @@ form {
       display: block;
     }
 
+    .glyphicon {
+      z-index: -1;
+    }
+
     input, select, textarea {
       width: 100%;
     }
