--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -288,48 +288,24 @@ uib-accordion .panel-group {
   }
 }
 
-form {
-  .editable-wrap {
-    label {
-      font-weight: bold;
-      font-size: 15px;
-      margin: 15px 0 0 0;
-      padding: 0;
-      display: block;
-    }
-
-    .glyphicon {
-      position: inherit;
-    }
-
-    input, select, textarea {
-      width: 100%;
-    }
-  }
-}
-
-$input-select: 80px;
-
-.input-select {
-  width: $input-select;
-}
-
-selection-view, .main-editable-content {
-
-  $max-width: 500px;
-
-  .form-control {
-    max-width: $max-width;
-
-    &.with-button {
-      max-width: calc(#{$max-width} - #{$input-select});
-      width: calc(100% - #{$input-select});
-    }
-  }
-}
-
 .editable-wrap {
- word-wrap: break-word;
+  word-wrap: break-word;
+
+  label {
+    font-weight: bold;
+    font-size: 15px;
+    margin: 15px 0 0 0;
+    padding: 0;
+    display: block;
+  }
+
+  .glyphicon {
+    position: inherit;
+  }
+
+  input, select, textarea {
+    width: 100%;
+  }
 
   a {
     cursor: pointer;
@@ -341,6 +317,34 @@ selection-view, .main-editable-content {
 
   textarea {
     height: 100px;
+  }
+}
+
+$input-max-width: 500px;
+$input-select: 80px;
+
+.input-select {
+  width: $input-select;
+}
+
+.row.range-input {
+  @include clearfix;
+  margin: -15px;
+  width: 100%;
+  max-width: calc(#{$input-max-width} + 15px);
+  .col-md-6 { padding-right: 0; }
+}
+
+.editable-wrap .content {
+  padding-right: 170px;
+}
+
+.form-control {
+  max-width: $input-max-width;
+
+  &.with-button {
+    max-width: calc(#{$input-max-width} - #{$input-select});
+    width: calc(100% - #{$input-select});
   }
 }
 
@@ -370,10 +374,6 @@ selection-view, .main-editable-content {
   .selection-form {
     min-height: calc(100vh - 134px);
     padding-right: 40px;
-
-    .editable-wrap {
-      padding-right: 170px;
-    }
 
     .property-ordering {
       position: absolute;
