Autofocus when when editing starts

--- a/src/components/editor/classForm.html
+++ b/src/components/editor/classForm.html
@@ -1,7 +1,7 @@
 
 <h4>{{ctrl.class.normalizedType + ' information' | capitalize | translate}}</h4>
 
-<editable data-title="{{ctrl.class.normalizedType + ' label' | capitalize}}">
+<editable data-title="{{ctrl.class.normalizedType + ' label' | capitalize}}" autofocus>
   <input id="classLabel" class="form-control" type="text" localized-input="label" ng-model="ctrl.class.label"/>
 </editable>
 
