--- a/src/components/editor/predicateForm.html
+++ b/src/components/editor/predicateForm.html
@@ -1,6 +1,6 @@
 <h4>{{ctrl.predicate.normalizedType + ' information' | capitalize | translate}}</h4>
 
-<editable data-title="{{ctrl.predicate.normalizedType + ' label' | capitalize}}">
+<editable data-title="{{ctrl.predicate.normalizedType + ' label' | capitalize}}" autofocus>
   <input id="predicateName" class="form-control" type="text" localized-input="label" ng-model="ctrl.predicate.label" />
 </editable>
 
