--- a/src/components/model/modelForm.html
+++ b/src/components/model/modelForm.html
@@ -2,7 +2,7 @@
 
   <h4>{{ctrl.model.normalizedType + ' information' | capitalize | translate}}</h4>
 
-  <editable data-title="{{ctrl.model.normalizedType + ' label' | capitalize}}">
+  <editable data-title="{{ctrl.model.normalizedType + ' label' | capitalize}}" autofocus>
     <input id="modelLabel" class="form-control" type="text" localized-input="modelLabel" ng-model="ctrl.model.label" />
   </editable>
 
