--- a/src/components/editor/searchConceptModal.html
+++ b/src/components/editor/searchConceptModal.html
@@ -50,6 +50,13 @@
             </div>
 
             <div ng-if="ctrl.isSelectionNewConceptData()">
+
+              <editable title="Vocabulary">
+                <select id="referenceSelection" class="form-control" required ng-model="ctrl.selection.reference"
+                        ng-options="reference | translateLabel for reference in ctrl.selectableReferences">
+                </select>
+              </editable>
+
               <editable data-title="Concept label">
                 <div class="input-group input-group-md">
                   <input id="conceptLabel" type="text" class="form-control" required string-input="label" ng-model="ctrl.selection.label" />
