--- a/src/components/editor/uriSelect.html
+++ b/src/components/editor/uriSelect.html
@@ -1,2 +1,2 @@
-<input id="{{ctrl.id}}" type="text" class="form-control" uri-input ng-required="ctrl.mandatory" model="ctrl.model" ng-model="ctrl.uri" />
+<input id="{{ctrl.id}}" type="text" class="form-control" uri-input ng-required="ctrl.mandatory" model="ctrl.model" ng-model="ctrl.uri" ng-blur="ctrl.handleChange()"/>
 <button ng-if="formController.editing" type="button" class="btn btn-default btn-sm" ng-click="ctrl.selectUri()">{{('Choose ' + ctrl.type) | translate}}</button>
