--- a/src/components/editor/searchPredicateModal.html
+++ b/src/components/editor/searchPredicateModal.html
@@ -66,7 +66,7 @@
 
             <editable data-title="Predicate type" ng-show="ctrl.typeSelectable">
               <div class="selectContainer">
-                <select class="form-control" ng-model="ctrl.selection.type" ng-options="type | translate for type in ctrl.types"></select>
+                <select class="form-control" ng-model="ctrl.selection.type" ng-options="type | translate for type in ['attribute', 'association']"></select>
               </div>
             </editable>
           </div>
