--- a/src/components/editor/searchPredicateModal.html
+++ b/src/components/editor/searchPredicateModal.html
@@ -55,9 +55,9 @@
 
         <div class="col-md-4 search-selection editable-form">
 
-          <predicate-form ng-if="!ctrl.isSelectionFormData() && ctrl.selection" predicate="ctrl.selection" old-predicate="ctrl.selection" model="ctrl.model"></predicate-form>
+          <predicate-form ng-if="ctrl.isSelectionPredicate()" predicate="ctrl.selection" old-predicate="ctrl.selection" model="ctrl.model"></predicate-form>
 
-          <div ng-if="ctrl.isSelectionFormData()">
+          <div ng-if="ctrl.isSelectionExternalEntity()">
             <editable data-title="External URI" autofocus>
               <div class="input-group input-group-md">
                 <input id="externalUri" type="text" class="form-control" required uri-input="required-namespace" model="ctrl.model" ng-model="ctrl.selection.id" />
