--- a/src/components/model/modelForm.html
+++ b/src/components/model/modelForm.html
@@ -17,7 +17,7 @@
     <state-select id="modelState" state="ctrl.model.state" model="ctrl.model"></state-select>
   </editable>
 
-  <editable-root-class model="ctrl.model"></editable-root-class>
+  <editable-root-class ng-if="ctrl.model.isOfType('profile')" model="ctrl.model"></editable-root-class>
 
   <relations-view model="ctrl.model"></relations-view>
 </div>
