--- a/src/components/model/model.html
+++ b/src/components/model/model.html
@@ -5,8 +5,8 @@
 
   <div class="bottom" ng-if="!ctrl.model.unsaved">
     <div class="model-panel--left" float="model-panel--left-placeholder">
-      <uib-tabset>
-        <uib-tab active="tab.active" ng-repeat="tab in ctrl.tabs">
+      <uib-tabset active="ctrl.activeTab">
+        <uib-tab ng-repeat="tab in ctrl.tabs">
           <uib-tab-heading>
             <i ng-class="tab.glyphIconClass"></i><p>{{tab.type | translate}}</p>
           </uib-tab-heading>
