Reduce duplication by introducting editableMultiple

--- a/src/components/editor/classForm.html
+++ b/src/components/editor/classForm.html
@@ -21,7 +21,7 @@
   <uri-select id="scopeClass" type="class" uri="ctrl.class.scopeClass" model="ctrl.model" mandatory="true" after-selected="ctrl.addPropertiesFromClass(id, 'scope')"></uri-select>
 </editable>
 
-<editable-multiple-uri-select id="equivalentClass" type="class" uris="ctrl.class.equivalentClasses" model="ctrl.model" data-title="{{'Equivalent class'}}" allow-input="true"></editable-multiple-uri-select>
+<editable-multiple-uri-select id="equivalentClass" type="class" ng-model="ctrl.class.equivalentClasses" model="ctrl.model" data-title="{{'Equivalent class'}}"></editable-multiple-uri-select>
 
 <defined-by entity="ctrl.class" model="ctrl.model"></defined-by>
 
