--- a/src/components/editor/editableMultiple.html
+++ b/src/components/editor/editableMultiple.html
@@ -2,26 +2,29 @@
   <editable-label input-id="ctrl.id" ng-show="ctrl.title && (ctrl.ngModel.length > 0 || ctrl.isEditing())" data-title="ctrl.title"></editable-label>
 
   <span ng-if="!ctrl.isEditing()" ng-repeat="value in ctrl.ngModel">
-    <span>{{value}}<span ng-if="!$last">, </span></span>
+    <span ng-if="!ctrl.link">{{ctrl.format(value)}}<span ng-if="!$last">, </span></span>
+    <a ng-if="ctrl.link" ng-href="{{ctrl.link(value)}}">{{ctrl.format(value)}}<span ng-if="!$last">, </span></a>
   </span>
 
   <div ng-show="ctrl.isEditing()">
     <div class="form-control multi-input">
       <div ng-repeat="value in ctrl.ngModel" ng-class="['added-item', { 'has-error': !ctrl.isValid(value)}]">
-        {{value}}
+        {{ctrl.format(value)}}
         <div class="delete-item badge" ng-click="ctrl.deleteValue(value)">&times;</div>
       </div>
 
       <input name="valueInput"
              id="{{ctrl.id}}"
-             datatype-input="{{ctrl.inputType}}"
              type="text"
              restrict-duplicates="ctrl.ngModel"
              ng-model="ctrl.input"
              ng-keydown="ctrl.keyPressed($event)"
-             ng-blur="ctrl.addValueFromInput()" />
+             ng-blur="ctrl.addValueFromInput()"
+             ng-hide="ctrl.hideInput" />
     </div>
 
     <error-messages ng-model-controller="ngModelControllers"></error-messages>
+
+    <ng-transclude></ng-transclude>
   </div>
 </div>
