--- a/src/components/editor/editableMultipleUriSelect.html
+++ b/src/components/editor/editableMultipleUriSelect.html
@@ -1,32 +1,13 @@
-<div class="editable-wrap form-group">
+<editable-multiple id="{{ctrl.id}}"
+                   data-title="{{ctrl.title}}"
+                   ng-model="ctrl.ngModel"
+                   allow-input="ctrl.allowInput"
+                   validators="ctrl.validators"
+                   formatter="ctrl.formatter"
+                   parser="ctrl.parser"
+                   placeholder="ctrl.placeholder"
+                   link="ctrl.link">
 
-  <editable-label input-id="ctrl.id" ng-show="ctrl.title && (ctrl.items.length > 0 || ctrl.isEditing())" data-title="ctrl.title"></editable-label>
+  <button ng-if="ctrl.isEditing()" type="button" class="btn btn-default btn-sm" style="display: block" ng-click="ctrl.selectUri()">{{('Choose ' + ctrl.type) | translate}}</button>
+</editable-multiple>
 
-  <span ng-if="!ctrl.isEditing()" ng-repeat="item in ctrl.items track by item.value()">
-    <span ng-show="item.showPlain">{{item.displayValue}}<span ng-if="!$last">, </span></span>
-    <a ng-show="item.showLink" ng-href="{{item.href}}">{{item.displayValue}}<span ng-if="!$last">, </span></a>
-  </span>
-
-  <div ng-if="ctrl.isEditing()">
-      <div class="form-control multi-input">
-        <div ng-repeat="item in ctrl.items track by item.value()" class="added-item">
-          {{item.displayValue}}
-          <div class="delete-item badge" ng-click="ctrl.deleteUri(item)">&times;</div>
-        </div>
-
-        <input name="uriInput"
-               id="{{ctrl.id}}"
-               uri-input
-               model="ctrl.model"
-               type="text"
-               restrict-duplicates="ctrl.uris"
-               ng-model="ctrl.uriInput"
-               ng-keydown="ctrl.keyPressed($event)"
-               ng-blur="ctrl.addUriFromInput()"
-               ng-show="ctrl.allowInput" />
-      </div>
-    <error-messages ng-model-controller="uriInputController"></error-messages>
-
-    <button ng-if="ctrl.isEditing()" type="button" class="btn btn-default btn-sm" style="display: block" ng-click="ctrl.addUri()">{{('Choose ' + ctrl.type) | translate}}</button>
-  </div>
-</div>
